human-intervention-logs/org.scalatest:scalatest-core_3:3.2.19/gradle-test/gradle-test-2026-05-05T22-41-07-192948Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.scalatest:scalatest-core_3:3.2.19
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :compileScala NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations

> Task :compileTestJava
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/tests/src/org.scalatest/scalatest-core_3/3.2.19/src/test/java/org_scalatest/scalatest_core_3/IconEmbellishedListCellRendererInnerIconsAccess.java:13: error: cannot find symbol
import org.scalatest.tools.IconEmbellishedListCellRenderer$Icons$;
                          ^
  symbol:   class IconEmbellishedListCellRenderer$Icons$
  location: package org.scalatest.tools
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/tests/src/org.scalatest/scalatest-core_3/3.2.19/src/test/java/org_scalatest/scalatest_core_3/IconEmbellishedListCellRendererInnerIconsAccess.java:21: error: cannot find symbol
        IconEmbellishedListCellRenderer$Icons$ icons =
        ^
  symbol:   class IconEmbellishedListCellRenderer$Icons$
  location: class IconEmbellishedListCellRendererInnerIconsAccess
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/tests/src/org.scalatest/scalatest-core_3/3.2.19/src/test/java/org_scalatest/scalatest_core_3/IconEmbellishedListCellRendererInnerIconsAccess.java:22: error: cannot find symbol
                new IconEmbellishedListCellRenderer$Icons$(renderer);
                    ^
  symbol:   class IconEmbellishedListCellRenderer$Icons$
  location: class IconEmbellishedListCellRendererInnerIconsAccess
3 errors

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/tests/src/org.scalatest/scalatest-core_3/3.2.19/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/tests/src/org.scalatest/scalatest-core_3/3.2.19/src/test/java/org_scalatest/scalatest_core_3/IconEmbellishedListCellRendererInnerIconsAccess.java:13: error: cannot find symbol
  import org.scalatest.tools.IconEmbellishedListCellRenderer$Icons$;
                            ^
    symbol:   class IconEmbellishedListCellRenderer$Icons$
    location: package org.scalatest.tools
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 32s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2249-1d7c6f6d/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.scalatest:scalatest-core_3:3.2.19 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 36s
9 actionable tasks: 1 executed, 8 up-to-date
